--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="form-group">
           <select name="task-type" class="select-dropdown">
             <option value="" disabled selected>Pick a task type</option>
-            <option value="Print">Work</option>
-            <option value="Web">School</option>
-            <option value="Mobile">Personal</option>
+            <option value="Work">Work</option>
+            <option value="School">School</option>
+            <option value="Personal">Personal</option>
           </select>
         </div>
       <div class="form-group">
